# QuantiT

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Readme.md  VERSION.txt  cmake-variants.yaml  main.cpp  package.json  perf_test  perf_test.cpp  prof.txt  setup.py  valgrindPID
Design document/: Doc.aux  Doc.fdb_latexmk  Doc.fls  Doc.out  Doc.tex  Doc.toc
Design documents/: Doc.tex  matrice_bloques.eps  matrice_bloques.eps_tex
Documentation/: CMakeLists.txt  Doxyfile.in  Roadmap1.rst  conf.py  doxy.conf  index.rst
Notes/: notes.aux  notes.dvi  notes.fdb_latexmk  notes.fls  notes.out  notes.tex  notes.toc
cmake/: FindSphinx.cmake
docs/: .buildinfo  CPPinterface.html  Installation.html  Pythoninterface.html  Roadmap1.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: Installation.doctree  Pythoninterface.doctree  Roadmap1.doctree  environment.pickle  index.doctree
docs/_sources/: CPPinterface.rst.txt  Pythoninterface.rst.txt  index.rst.txt
doxygen/html/: LinearAlgebra_8h_source.html  MPT_8h_source.html  annotated.html  blockTensor_2LinearAlgebra_8h_source.html  btensor_8h_source.html  classes.html  classproperty-members.html  classproperty.html  classquantit_1_1MPO-members.html  classquantit_1_1MPO.html  classquantit_1_1MPO__coll__graph.dot  classquantit_1_1MPO__coll__graph.map  classquantit_1_1MPO__coll__graph.md5  classquantit_1_1MPS-members.html  classquantit_1_1MPS.html  classquantit_1_1MPS__coll__graph.dot  classquantit_1_1MPS__coll__graph.map  classquantit_1_1MPS__coll__graph.md5  classquantit_1_1MPS__inherit__graph.dot  classquantit_1_1MPS__inherit__graph.map  classquantit_1_1MPS__inherit__graph.md5  classquantit_1_1MPT-members.html  classquantit_1_1MPT.html  classquantit_1_1MPT__coll__graph.md5  classquantit_1_1MPT__inherit__graph.dot  classquantit_1_1MPT__inherit__graph.map  classquantit_1_1any__quantity-members.html  classquantit_1_1any__quantity.html  classquantit_1_1any__quantity__vector-members.html  classquantit_1_1any__quantity__vector.html  classquantit_1_1bMPO-members.html  classquantit_1_1bMPO.html  classquantit_1_1bMPO__coll__graph.dot  classquantit_1_1bMPO__coll__graph.map  classquantit_1_1bMPO__inherit__graph.md5  classquantit_1_1bMPS-members.html  classquantit_1_1bMPS.html  classquantit_1_1bMPS__coll__graph.dot  classquantit_1_1bMPS__coll__graph.map  classquantit_1_1bMPS__coll__graph.md5  (+456 more)
doxygen/latex/: LinearAlgebra_8h_source.tex  MPT_8h_source.tex  annotated.tex  blockTensor_2LinearAlgebra_8h_source.tex  btensor_8h_source.tex  classproperty.tex  classquantit_1_1MPO.tex  classquantit_1_1MPO.tex.tmp  classquantit_1_1MPO__coll__graph.md5  classquantit_1_1MPO__inherit__graph.dot  classquantit_1_1MPS.tex  classquantit_1_1MPS__coll__graph.dot  classquantit_1_1MPS__coll__graph.md5  classquantit_1_1MPS__inherit__graph.dot  classquantit_1_1MPS__inherit__graph.md5  classquantit_1_1MPT.tex  classquantit_1_1MPT__coll__graph.md5  classquantit_1_1MPT__inherit__graph.dot  classquantit_1_1any__quantity.tex  classquantit_1_1any__quantity__vector.tex  classquantit_1_1bMPO.tex  classquantit_1_1bMPO__inherit__graph.dot  classquantit_1_1bMPO__inherit__graph.md5  classquantit_1_1bMPS.tex  classquantit_1_1bMPS__coll__graph.dot  classquantit_1_1bMPS__coll__graph.md5  classquantit_1_1bMPS__inherit__graph.dot  classquantit_1_1bMPS__inherit__graph.md5  classquantit_1_1bMPT.tex  classquantit_1_1bMPT__coll__graph.md5  classquantit_1_1bMPT__inherit__graph.dot  classquantit_1_1bad__selection__rule.tex  classquantit_1_1bad__selection__rule__coll__graph.dot  classquantit_1_1bad__selection__rule__inherit__graph.md5  classquantit_1_1blocklist.tex  classquantit_1_1btensor.tex  classquantit_1_1btensor__coll__graph.dot  classquantit_1_1btensor__coll__graph.md5  classquantit_1_1conserved_1_1C.tex  classquantit_1_1conserved_1_1Z.tex  (+177 more)
doxygen/xml/: Doxyfile.xml  LinearAlgebra_8h.xml  MPT_8h.xml  blockTensor_2LinearAlgebra_8h.xml  btensor_8h.xml  classproperty.xml  classquantit_1_1MPO.xml  classquantit_1_1MPS.xml  classquantit_1_1MPT.xml  classquantit_1_1any__quantity.xml  classquantit_1_1any__quantity__vector.xml  classquantit_1_1bMPO.xml  classquantit_1_1bMPS.xml  classquantit_1_1bMPT.xml  (+103 more)
include/: LinearAlgebra.h  MPT.h  TensorGroup.h  cgroup_container.h  cgroup_impl.h  composite_group.h  cond_doctest.h  dimension_manip.h  dmrg.h  dmrg_logger.h  dmrg_options.h  doctest_redef.h  groups.h  groups_utils.h  method_detect.h  models.h  numeric.h  operators.h  property.h  templateMeta.h  tensorgdot.h  torch_formatter.h
python_binding/: CMakeLists.txt  algorithm.cpp  conserved.cpp  linalg.cpp  networks.cpp  operators.cpp  quantt.cpp  utilities.h
python_binding/exemples/: MPO.ipynb  MPO.py  Tensors.ipynb  Tensors.py  dmrg.ipynb  dmrg.py  quantit.ipynb
python_binding/quantit/: __init__.py
sources/: CMakeLists.txt  LinearAlgebra.cpp  MPT.cpp  TensorGroup.cpp  any_quantity.cpp  btensor.cpp  btensor_linalg.cpp  composite_group.cpp  dimension_manip.cpp  dmrg.cpp  dmrg_logger.cpp  dmrg_options.cpp  groups.cpp  models.cpp  operators.cpp  tensorgdot.cpp  torch_formatter.cpp
sphinx/: Installation.html  Pythoninterface.html  index.html  objects.inv  searchindex.js
tests/: 2Dheisenberg.cpp  CMakeLists.txt  DMRG_heisenberg_test.h  benchmark.cpp  test.cpp  test2.cpp  test_Cgroups.h
tests/2dHeisenberg/: mpotensor_1.txt  mpotensor_10.txt  mpotensor_11.txt  mpotensor_17.txt  mpotensor_2.txt  mpotensor_23.txt  mpotensor_24.txt  mpotensor_25.txt  mpotensor_26.txt  mpotensor_27.txt  mpotensor_28.txt  mpotensor_29.txt  mpotensor_3.txt  mpotensor_30.txt  mpotensor_31.txt  mpotensor_32.txt  mpotensor_4.txt  mpotensor_5.txt  mpotensor_6.txt  mpotensor_7.txt  numsQNs_1.txt  numsQNs_11.txt  numsQNs_17.txt  numsQNs_18.txt  numsQNs_2.txt  numsQNs_23.txt  numsQNs_24.txt  numsQNs_25.txt  numsQNs_26.txt  numsQNs_27.txt  numsQNs_28.txt  numsQNs_29.txt  numsQNs_3.txt  numsQNs_30.txt  numsQNs_31.txt  numsQNs_32.txt  numsQNs_4.txt  numsQNs_5.txt  numsQNs_6.txt  numsQNs_7.txt
tests/Mock/: CMakeLists.txt  TensorGroup_mock.h  mocks.cpp
(+76 files in other folders)
